# eog

./: README.md  pyproject.toml
benchmarks/: calibrated_gap_feature_selection.py  comparative_uncertainty.py  competitor_comparison.py  core_local_bridge_benchmark.py  core_local_bridge_confirmation.py  mode_separation_comparators.py  multiaxial_archetypes.py  null_family_comparison.py  persistent_split_benchmark.py  positive_only_field_recovery.py  real_taxon_mode_audit.py  real_taxon_pilot.py  real_taxon_pilot_manifest.csv  reference_choice_audit.py  robustness_audit.py  shared_scaling_contract.py  support_topology_heldout_comparison.py  support_topology_stress.py  survey_patch_validation.py  topology_discrimination.py
docs/: bridge_graph_builder.md  bridge_inference.md  bridge_sensitivity.md  calibrated_gap_feature_selection_protocol.md  claim_matrix.md  comparative_uncertainty_protocol.md  comparative_uncertainty_results.md  competitor_comparison_results.md  core_local_bridge_confirmation_protocol.md  core_local_bridge_confirmation_results.md  core_local_bridge_results.md  evidence_ledger.md  frozen_comparison_tutorial.md  hypothesis_survey_contract.md  manuscript_methods_specification.md  migration_provenance.md  mode_separation_comparator_results.md  multiaxial_archetype_results.md  multiaxial_methodology.md  null_family_comparison_protocol.md  null_family_comparison_results.md  odsp_migration_map.md  persistent_split_protocol.md  persistent_split_results.md  positive_only_field_recovery_protocol.md  real_taxon_case_study.md  real_taxon_mode_audit_results.md  (+10 more)
(+86 files in other folders)
