[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environmental-occupancy-geometry"
version = "0.1.0"
description = "Environmental occupancy geometry from occurrence feature matrices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "zuizui0223"}]
dependencies = ["numpy>=1.24"]

[project.scripts]
eog-hypothesis-survey = "eog.hypothesis_survey_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pandas>=2"]
raster = ["pandas>=2", "rasterio>=1.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
